--- a/index1.html
+++ b/index1.html
@@ -49,7 +49,7 @@
     <section id="home1">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="/images/10074657.jpg" class="d-block mx-lg-auto img-fluid centre-img blended-img" alt="Bootstrap Themes" width="700" height="500" loading="lazy" style="margin-right: 75px !important;">
+          <img src="images/10074657.jpg" class="d-block mx-lg-auto img-fluid centre-img blended-img" alt="Bootstrap Themes" width="700" height="500" loading="lazy" style="margin-right: 75px !important;">
         </div>
         <div class="col-lg-6 left-mar">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Empowering Electrical Solutions!</h1>
